Fix overlap on mobile view

--- a/source/_base.scss
+++ b/source/_base.scss
@@ -5,7 +5,10 @@ html, body {
 }
 
 body {
-    margin: 0;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+    text-align: center;
 }
 
 #fork-corner {
